fix: Use error key instead of errors

--- a/custom_components/ikea_obegransad_led/translations/en.json
+++ b/custom_components/ikea_obegransad_led/translations/en.json
@@ -10,7 +10,7 @@
         }
       }
     },
-    "errors": {
+    "error": {
       "connection_error": "Cannot connect to the lamp.",
       "effect_does_not_exist": "The specified effect does not exist."
     },
